fmt; this is not an etymology; proper n; registered trademark; queries regarding trademark status and capitalisation of fr: entry <Durex#65820>

--- a/wiki/Durex.wikitext
+++ b/wiki/Durex.wikitext
@@ -1,11 +1,24 @@
 ==English==
-
+<!--This is not an etymology: etymologies say where the word came from, not how it is used:
 ===Etymology===
 '''Durex''' is a brand name for many products. The usage of this brand name as a generic name has been adopted differently in different localities. ''Warning: do not confuse these usages as it can be quite embarrassing!''
+-->
 
-===Noun===
-#sticky/adhesive tape (''Aust: - Durex is one popular brand, and is often used as the generic name)
-#condom (''UK: - Durex is one popular brand, and is often used as the generic name)
+===Proper noun===
+'''Durex'''&reg;
 
+#(''British'') A brand of condom; sometimes used as a generic term for a condom.
+#(''Australia'') A brand of [[adhesive tape]]; sometimes used as the generic term for adhesive tape.
+
+====Usage note====
+*Given the very different meanings in the UK and Australia, confusion (or worse) can arise when natives of one country use this term in the other.
+
+----
 ==French==
-#''(Québec):'' cellophane tape or "Scotch" tape.
+===Noun===
+'''Durex'''&reg;<!--trademark in Canada too?--> 
+
+#(''Quebec'') A brand of adhesive tape.
+
+====Synonyms====
+*[[Scotch#French|Scotch]]<!--capitalised?-->
