--- a/wiki/Durex.wikitext
+++ b/wiki/Durex.wikitext
@@ -7,7 +7,7 @@
 ===Proper noun===
 '''Durex'''&reg;
 
-#(''British'') A brand of condom; sometimes used as a generic term for a condom.
+#(''British'') A brand of [[condom]]; sometimes used as a generic term for a condom.
 #(''Australia'') A brand of [[adhesive tape]]; sometimes used as the generic term for adhesive tape.
 
 ====Usage note====
