fmt; +der, fr: & it: <rabies#65792>

--- a/wiki/rabies.wikitext
+++ b/wiki/rabies.wikitext
@@ -1,6 +1,13 @@
-=={{En}}==
+==English==
 ===Noun===
-# A [[viral]] [[disease]] that causes acute [[encephalitis]] in animals and people.
+'''rabies''' (''singular''; ''[[uncountable]]'')
 
-===Translations===
-:'''Hebrew:''' [[כלבת]] (''f''.)
+#A [[viral]] [[disease]] that causes acute [[encephalitis]] in animals and people.
+
+====Derived terms====
+*[[rabid]]
+
+====Translations====
+*French: [[rage#French|rage]] ''f''
+*Italian: [[rabbia]] ''f''
+*Hebrew: [[כלבת]] ''f''
