fmt; +syns, fr: & fr: entry <rage#58162>

--- a/wiki/rage.wikitext
+++ b/wiki/rage.wikitext
@@ -1,4 +1,22 @@
-Noun -- un[[controlled]] [[anger]]
+==English==
+===Noun===
+'''rage'''
+
+#[[Uncontrolled]] [[anger]].
+
+====Synonyms====
+*[[fury]]
+*[[ire]]
 
 ====Translations====
+*French: rage ''f'', [[furie]] ''f''
+*Italian: [[rabbia]] ''f'', [[furia]] ''f''
 *Lithuanian: [[įniršis]] ''m'', [[įsiūtis]] ''m'', [[įtūžis]] ''m''
+
+----
+==French==
+===Noun===
+'''rage''' ''f'' (''plural'' '''rages''')
+
+#rage
+#[[rabies]]
