+f & plural forms <mammifero#65778>

--- a/wiki/mammifero.wikitext
+++ b/wiki/mammifero.wikitext
@@ -1,11 +1,11 @@
 ==Italian==
 ===Noun===
-'''mammifero''' ''m''
+'''mammifero''' ''m'' (''plural'' '''mammiferi''')
 
 # [[mammal]]
 
 ===Adjective===
-'''mammifero'''
+'''mammifero''' ''m'' (''f'' '''mammifera''', ''m plural'' '''mammiferi''', ''f plural'' '''mammifere''')
 
 # [[mammalian]]
 
