fmt; +Wikipedia link <fairy shrimp#65771>

--- a/wiki/fairy_shrimp.wikitext
+++ b/wiki/fairy_shrimp.wikitext
@@ -1,4 +1,9 @@
 [[Image:fairyshrimp.gif|thumb|fairy shrimp]]
 ==English==
 ====Noun====
-#Small [[freshwater]] [[branchiopod]] having a [[transparent]] body with many [[appendage]]s; swims on its back
+'''fairy shrimp''' (''plural'' '''fairy shrimps''')
+
+#A small [[freshwater]] [[branchiopod]] having a [[transparent]] body with many [[appendage]]s and swimming on its back.
+
+===See also===
+*[[w:fairy shrimp|Wikipedia article on the fairy shrimp]]<!--does not yet exist, but has been requested-->
