fmt; apparently legitimate (2050 hits on Google as of today); compar, superl, usage note, ant <sucktacular#65751>

--- a/wiki/sucktacular.wikitext
+++ b/wiki/sucktacular.wikitext
@@ -1,3 +1,14 @@
-- Very bad.
+==English==
+===Etymology===
+[[suck]], to be bad + [[spectacular|(spec)tacular]]
 
-- Opposite of spectacular.
+===Adjective===
+'''sucktacular''' (''[[comparative]]'' '''more sucktacular''', ''[[superlative]]'' '''most sucktacular''')
+
+#(''slang'') Extremely bad.
+
+====Usage note====
+*Said of things to which the adjective [[spectacular]] might be applied if they were extremely good.
+
+====Antonyms====
+*[[spectacular]]
