fmt, plural, another sense <zéro#65748>

--- a/wiki/z%C3%A9ro.wikitext
+++ b/wiki/z%C3%A9ro.wikitext
@@ -1,6 +1,6 @@
 ==French==
 ===Noun===
-'''zéro''' ''m''
+'''zéro''' ''m'' (''plural'' '''zéros''')
 
-# [[zero]]
-# [[nothing]], [[nought]]
+#(''numeral'') [[zero]], [[nought]], [[O]] (''British, in reading telephone numbers'')
+#(''value'') zero, nought
