--- a/wiki/z%C3%A9ro.wikitext
+++ b/wiki/z%C3%A9ro.wikitext
@@ -2,5 +2,5 @@
 ===Noun===
 '''zéro''' ''m'' (''plural'' '''zéros''')
 
-#(''numeral'') [[zero]], [[nought]], [[O]] (''British, in reading telephone numbers'')
+#(''numeral'') [[zero]], [[nought]], [[O]] (''British, in reading numbers'')
 #(''value'') zero, nought
