--- a/wiki/%E6%B3%A2.wikitext
+++ b/wiki/%E6%B3%A2.wikitext
@@ -11,13 +11,13 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#waves, breakers
-*# undulations
+*# [[wave]]s, [[breaker]]s
+*# [[undulation]]s
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -29,15 +29,64 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': bo1
 
+===Compounds===
+*[[波长]]
+*[[波荡]]
+*[[波导管]]
+*[[波动]]
+*[[波段]]
+*[[波尔卡]]
+*[[波峰]]
+*[[波幅]]
+*[[波腹]]
+*[[波谷]]
+*[[波光]]
+*[[波诡云谲]]
+*[[波黑]]
+*[[波及]]
+*[[波节]]
+*[[波兰]]
+*[[波澜]]
+*[[波澜壮阔]]
+*[[波浪]]
+*[[波浪鼓]]
+*[[波累]]
+*[[波罗门教]]
+*[[波能]]
+*[[波平浪静]]
+*[[波谱]]
+*[[波俏]]
+*[[波束]]
+*[[波斯]]
+*[[波斯菊]]
+*[[波斯猫]]
+*[[波斯尼亚和黑塞哥维那]]
+*[[波速]]
+*[[波涛]]
+*[[波纹]]
+*[[波纹管]]
+*[[波形]]
+*[[波源]]
+*[[波折]]
+*[[波状热]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[は]] (ha), [[ひ]] (hi)
 ** '''[[Kun]]''': [[なみ]] (nami)
+
+===Compounds===
+*[[波形]]
+*[[波線]]
+*[[波動]]
+*[[波長]]
+*[[波乱万丈]]
+*[[波浪]]
 
 * '''Other info''':  
 
