--- a/wiki/unreadable.wikitext
+++ b/wiki/unreadable.wikitext
@@ -1,19 +1,45 @@
 ==English==
 ===Adjective===
-#not easily deciphered, as in ''unreadable handwriting''
-#not worth reading: ''unreadable book''
-#not interesting, boring: ''unreadable charts''
+'''unreadable''' (''[[comparative]]'' '''more unreadable''', ''[[superlative]]'' '''most unreadable''')
 
-====Examples====
-*''unreadable letters''
-*''a machine that cut up secret documents into small unreadable fragments''
-
+#That cannot be read or is not easy to read.
+#:''unreadable handwriting''
+#:''a machine that cut up secret documents into small unreadable fragments''
+#Not sufficiently interesting to be worth reading.
+#:''unreadable book''
+#:''unreadable charts''
 
 ====Synonyms====
-*[[indecipherable]]
-*[[unclear]]
-*[[undecipherable]]
+*(''that cannot be read or is not easy to read''): [[illegible]], [[indecipherable]], [[unclear]], [[undecipherable]]
+*(''not sufficiently interesting to be worth reading''): [[boring]], [[dull]], [[tedious]]
 
-====See also====
-*[[illegible]], [[illegibly]]
-*[[unreadably]]
+====Translations====
+
+'''that cannot be read or is not easy to read'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+*French: [[illisible]] ''m and f''
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+
+'''not sufficiently interesting to be worth reading'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
