--- a/wiki/unreadable.wikitext
+++ b/wiki/unreadable.wikitext
@@ -4,10 +4,10 @@
 
 #That cannot be read or is not easy to read.
 #:''unreadable handwriting''
-#:''a machine that cut up secret documents into small unreadable fragments''
+#:''a machine that cut up secret documents into small #:''unreadable charts''
+unreadable fragments''
 #Not sufficiently interesting to be worth reading.
 #:''unreadable book''
-#:''unreadable charts''
 
 ====Synonyms====
 *(''that cannot be read or is not easy to read''): [[illegible]], [[indecipherable]], [[unclear]], [[undecipherable]]
