/* Translations to be checked */  *Italian: [[grasso]] ''m'' <fat#1038499>

--- a/wiki/fat.wikitext
+++ b/wiki/fat.wikitext
@@ -83,6 +83,7 @@ The translations below need to be checked by native speakers and inserted into t
 *Danish: [[fedt]] ''n''
 *Dutch: [[vet]] ''n''
 *Finnish: [[rasva]] (1, 2), [[läski]] (1), [[liiat]] ''pl'' (3)
+*Italian: [[grasso]] ''m''
 *Russian: (žir) ''m''
 *Slovak: [[tuk]] ''m''
 *Spanish: [[grasa]] ''f''
