+fi <second cousin#55468>

--- a/wiki/second_cousin.wikitext
+++ b/wiki/second_cousin.wikitext
@@ -5,13 +5,15 @@
 
 # one of the persons who have a common great-grandparent.  Grandchild of one's grandaunt or granduncle.
 
-===Usage Note===
+====Usage Note====
 Starting with two second cousins (two persons with a common great-grandparent), the relationship between one of those persons and the offspring of the other is ''[[second cousin once removed]]''.
 
 The relationship between one of those persons and the grandchild of the other is ''[[second cousin twice removed]]''.
 
+====Translations====
+*{{fi}}: [[pikkuserkku]]
 
-===Related terms===
+====Related terms====
 *[[aunt]]
 *[[cousin]]
 *[[first cousin]]
