--- a/wiki/panda.wikitext
+++ b/wiki/panda.wikitext
@@ -42,6 +42,22 @@
 #panda
 
 ----
+
+==French==
+===Noun===
+'''panda''' ''m''
+
+# panda
+
+----
+
+==Italian==
+===Noun===
+'''panda''' ''m''
+
+# panda
+
+----
 ==Swedish==
 ===Noun===
 '''panda''' {{c}}
