--- a/wiki/%E8%83%96.wikitext
+++ b/wiki/%E8%83%96.wikitext
@@ -11,13 +11,13 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#fat, obese
-*# fatty
+*# [[fat]], [[obese]]
+*# [[fatty]]
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -29,11 +29,21 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': bun6
 
+===Compounds===
+*[[胖大海]]
+*[[胖嘟嘟]], [[胖嘟嘟的]]
+*[[胖墩墩]], [[胖墩墩的]]
+*[[胖墩儿]]
+*[[胖鼓鼓]], [[胖鼓鼓的]]
+*[[胖乎乎]], [[胖乎乎的]]
+*[[胖头鱼]]
+*[[胖子]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[はん]] (han)
