--- a/wiki/flos.wikitext
+++ b/wiki/flos.wikitext
@@ -6,10 +6,10 @@ Third declension
 
 # [[flower]]
 
-====Related Words====
+====Related terms====
 *[[folium]]
 *[[floral]] (''English'')
 *[[floreo]]
 *[[floreus]]
-
-[[es:Flos]][[la:Flos]]
+[[es:Flos]]
+[[la:Flos]]
