--- a/wiki/flor.wikitext
+++ b/wiki/flor.wikitext
@@ -1,10 +1,29 @@
-==[[Catalan]], [[Galician]], [[Portuguese]], [[Spanish]]==
+==Catalan==
+===Noun===
+'''flor'''
 
-'''Translations'''
+# [[flower]]
 
-*[[English]]: [[flower]]
-*[[French]]: [[fleur]]
-*[[Greek]]: [[ἄνθος]] (ánthos) ''n''
+----
 
+==Galician==
+===Noun===
+'''flor'''
 
+# [[flower]]
+
+----
+
+==Portuguese==
+===Noun===
+'''flor'''
+
+# [[flower]]
+
+----
+
+==Spanish==
+'''flor'''
+
+#[[flower]]
 [[es:Flor]]
