--- a/wiki/worm.wikitext
+++ b/wiki/worm.wikitext
@@ -20,10 +20,10 @@
 <!--left column-->
 *Arabic: [[دودة|دُودَة]] (dúːda) ''sg'', [[دود|دُودٌ]] (duːd) ''pl'', [[ديدان|دِيدَان]] (diːdáːn) ''pl''
 *[[Bosnian]]: [[crv]] ''m''
-*Bulgarian: [[червей]] (červej)
+*Bulgarian: [[червей]] (červej) ''m''
 *Catalan: [[cuc]] ''m''
 *Chinese: [[蟲]] (chóng)
-*Czech:  [[červ]]
+*Czech:  [[červ]] ''m''
 *Dutch: [[worm#Dutch|worm]]
 *Finnish: [[mato]]
 *French: [[ver]] ''m''
@@ -42,11 +42,11 @@
 *Korean: [[벌레]] (peolre)
 *Latin: [[vermis]] ''m''
 *Lithuanian: [[kirmėlė]] ''f''; [[kirminas]] ''m'' (also means insect larvae)
-*Polish: [[robak]]
+*Polish: [[robak]] ''m''
 *Portuguese: [[verme]] ''m''
-*Russian: [[червь]] (červ') ''m''
+*Russian: [[червь]] (červ') ''m'', [[черви]] (čérvi) ''pl''
 *Slovene: [[črv]] ''m''
-*Spanish: [[gusano]]
+*Spanish: [[gusano]] ''m''
 *Swedish: [[mask]] ''c''
 |}
 |}
