--- a/wiki/fiore.wikitext
+++ b/wiki/fiore.wikitext
@@ -4,8 +4,12 @@
 
 # [[flower]]
 
+===Etymology===
+from Latin ''[[fros]], froris''
+
 ===Related terms===
 *[[fiorellino]]
 *[[fioretto]]
 *[[fiorile]]
 *[[fiorire]]
+*[[fiorone]]
