--- a/wiki/fiore.wikitext
+++ b/wiki/fiore.wikitext
@@ -5,7 +5,7 @@
 # [[flower]]
 
 ===Etymology===
-from Latin ''[[fros]], froris''
+from Latin ''[[flos]], floris''
 
 ===Related terms===
 *[[fiorellino]]
