fmt; +example; +alt spell; remove adj sense - please replace if an example is found <willy nilly#65858>

--- a/wiki/willy_nilly.wikitext
+++ b/wiki/willy_nilly.wikitext
@@ -1,11 +1,12 @@
 ==English==
-
 ===Etymology===
 From ''will he, nill he''.
 
 ===Adverb===
-'''willy nilly'''
-#Without regard for consequences or the will of those affected.
+'''[[willy]] [[nilly]]'''
 
-===Adjective===
-'''willy nilly'''
+#Without regard for consequences or the will of those affected.
+#:''So people chasing money churn out novels [[willy-nilly]]''.
+
+====Alternative spellings====
+*[[willy-nilly]]
