--- a/wiki/%E7%B7%8A.wikitext
+++ b/wiki/%E7%B7%8A.wikitext
@@ -1,8 +1,8 @@
 * '''Alternate form''': [[紧]]
 
-* '''[[Wiktionary:Chinese radical index| Radical]] Number 120''': [[Wiktionary:Chinese radical index 糸|糸]]+8 strokes
+* '''[[Wiktionary:Chinese radical index| Radical]] Number 120''': [[Wiktionary:Chinese radical index 糸|糸]]+9 strokes
 
-* '''[[Wiktionary:Chinese total strokes index|Stroke number]]''': [[Wiktionary:Chinese total strokes index 14|14]]
+* '''[[Wiktionary:Chinese total strokes index|Stroke number]]''': [[Wiktionary:Chinese total strokes index 15|15]]
 
 * '''Stroke order''': 
 
@@ -13,13 +13,13 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#tense, tight, taut
-*# firm, secure
+*# [[tense]], [[tight]], [[taut]]
+*# [[firm]], [[secure]]
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -38,11 +38,19 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[きん]] (kin)
-** '''[[Kun]]''': [[ちじむ]] (chijimu), [[きびしい]] (kibishii)
+** '''[[Kun]]''': [[ちぢむ]] (chijimu), [[きびしい]] (kibishii)
+
+===Compounds===
+*[[緊急]]
+*[[緊縮]]
+*[[緊張]]
+*[[緊縛]]
+*[[緊迫]]
+*[[緊密]]
 
 * '''Other info''':  
 
