--- a/wiki/%E7%B4%A7.wikitext
+++ b/wiki/%E7%B4%A7.wikitext
@@ -13,13 +13,13 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#tense, tight, taut
-*# firm, secure
+*# [[tense]], [[tight]], [[taut]]
+*# [[firm]], [[secure]]
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -33,6 +33,45 @@
 
 * '''Style''': [[Simplified Chinese]] 
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[緊]]
+
+===Adjective===
+jǐn
+
+# [[tight]], [[close]]
+
+====Antonym===
+*[[松]]
+
+===Compounds===
+*[[紧巴巴]], [[紧巴巴的]]
+*[[金梆梆]], [[金梆梆的]]
+*[[紧绷绷]], [[紧绷绷的]]
+*[[紧逼]]
+*[[紧闭]]
+*[[紧凑]]
+*[[紧促]]
+*[[紧蹙]]
+*[[紧关节要]]
+*[[紧箍咒]]
+*[[紧急]]
+*[[紧急状态]]
+*[[紧接着]]
+*[[紧紧]]
+*[[紧邻]]
+*[[紧锣密鼓]]
+*[[紧忙]]
+*[[紧密]]
+*[[紧迫]]
+*[[紧俏]]
+*[[紧缺]]
+*[[紧身儿]]
+*[[紧实]]
+*[[紧缩]]
+*[[紧严]]
+*[[紧要]]
+*[[紧张]]
+*[[紧着]]
+*[[紧自]]
 
 * '''Other info''': 
 
