+modern persian; online etym says en borrowed from hindi which ultimately borrowed from an older form of the persian word... <naan#65848>

--- a/wiki/naan.wikitext
+++ b/wiki/naan.wikitext
@@ -10,4 +10,5 @@ Urdu ''nan'', Persian ''nan''
 ====Translations====
 *Chinese: [[馕]] (nang)
 *Japanese: [[ナン]] (nan)
+*[[Persian]]: [[نان]]
 *Tamil: [[நான்]]
