--- a/wiki/Hu.wikitext
+++ b/wiki/Hu.wikitext
@@ -1,3 +1,5 @@
+==English==
+===Pronoun===
 '''hu,'''  a clipping from  "human" (like "flu" from "influenza") - a 3rd person 
 gender-neutral pronoun.  It is pronounced [hju:] like "hu" in "human." Its brevity and morphological structure (one open syllable: a consonant + a vowel) make it similar t o other 3rd person pronouns -- a typical, easily recognizable member of this class: '''he - she - hu.'''
 
@@ -40,3 +42,6 @@ In a celebrated episode of "Star Trek: The Next Generation," the crew of the Ent
 Coined by [[Mikhail Epstein]].
 
 {{protologism}}
+===Proper noun===
+#A name for [[God]] in the [[Eckankar]] [[religion]].
+#A chant consisting of many people singing "Hu" together.
