/* Translations */ +urdu <naan#65848>

--- a/wiki/naan.wikitext
+++ b/wiki/naan.wikitext
@@ -11,4 +11,5 @@ Urdu ''nan'', Persian ''nan''
 *Chinese: [[馕]] (nang)
 *Japanese: [[ナン]] (nan)
 *[[Persian]]: [[نان]]
-*Tamil: [[நான்]]
+*[[Tamil]]: [[நான்]]
+*[[Urdu]]: [[نان]]
