fmt; +derived <impeach#65903>

--- a/wiki/impeach.wikitext
+++ b/wiki/impeach.wikitext
@@ -1,6 +1,12 @@
 ==English==
 ===Etymology===
 French ''[[empêcher]]'', [[hinder]], from Latin ''[[impedicare]]'', [[fetter]]
+
 ===Verb===
-#To hinder.
+'''to impeach''' ([[impeaches]], [[impeached]], [[impeaching]])
+
+#To [[hinder]].
 #To bring a legal proceeding against a public official, asserting that because he committed some offense, he should be removed from office.
+
+====Derived terms====
+*[[impeachment]]
