--- a/wiki/detail.wikitext
+++ b/wiki/detail.wikitext
@@ -14,7 +14,7 @@
 *Dutch: detail ''n'' (1, 3)
 *French: [[détail]] ''m'' (1, 2, 3)
 *Danish: detalje ''n'' (1, 2, 3)
-*Spanish: detalle ''m''
+*Spanish: detalle ''m'' (1, 2, 3)
 
 === Transitive Verb ===
 '''to detail'''
