--- a/wiki/%E5%AF%86.wikitext
+++ b/wiki/%E5%AF%86.wikitext
@@ -13,13 +13,13 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#dense, thick, close
-*# intimate
+*# [[dense]], [[thick]], [[close]]
+*# [[intimate]]
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -31,15 +31,66 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': mat6
 
+===Compounds===
+*[[密报]]
+*[[密闭]]
+*[[密布]]
+*[[密电]]
+*[[密度]]
+*[[密封]]
+*[[密告]]
+*[[密会]]
+*[[密集]]
+*[[密件]]
+*[[密接]]
+*[[密克罗尼西亚]]
+*[[密林]]
+*[[密令]]
+*[[密锣紧鼓]]
+*[[密码]]
+*[[密密层层]], [[密密层层的]]
+*[[密密丛丛]], [[密密丛丛的]]
+*[[密密麻麻]], [[密密麻麻的]]
+*[[密密匝匝]], [[密密匝匝的]]
+*[[密谋]]
+*[[密切]]
+*[[密商]]
+*[[密实]]
+*[[密使]]
+*[[密室]]
+*[[密谈]]
+*[[密探]]
+*[[密信]]
+*[[密讯]]
+*[[密约]]
+*[[密云不雨]]
+*[[密匝匝]]
+*[[密召]]
+*[[密植]]
+*[[密旨]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[みつ]] (mitsu)
 ** '''[[Kun]]''': [[しげし]] (shigeshi), [[ひそか]] (hisoka), [[ひそかに]] (hisokani)
+
+===Compounds===
+*[[密教]]
+*[[密航]]
+*[[密告]]
+*[[密室]]
+*[[密接]]
+*[[密談]]
+*[[密着]]
+*[[密入国]]
+*[[密封]]
+*[[密輸]]
+*[[密猟]]
 
 * '''Other info''':  
 
@@ -52,6 +103,12 @@
 * '''Romanization'''
 ** '''[[The 2000 South Korean Revised Romanization|The 2000 South Korean Revised]]''': mil
 ** '''[[McCune-Reischauer]]''': mil
+
+----
+
+==Vietnamese==
+
+* mật
 
 ----
 
