--- a/wiki/battologism.wikitext
+++ b/wiki/battologism.wikitext
@@ -1,5 +1,7 @@
 ==English==
 ===Noun===
-#A [[sentence]], [[phrase]], or saying in which a [[syllable]] or short sequence of syllables is repeated, often with different meanings. Example: ''Wright did not write "rite" right. Wright, write "rite" right, right away!'' Compare [[tongue-twister]].
+'''battologism''' (''plural'' '''battologisms''')
+
+#A [[sentence]] or [[phrase]] in which a [[syllable]] or short sequence of syllables is repeated, often with different meanings. Example: ''Wright did not write "rite" right. Wright, write "rite" right, right away!'' Compare [[tongue-twister]].
 
 {{protologism}}
