--- a/wiki/battologism.wikitext
+++ b/wiki/battologism.wikitext
@@ -2,6 +2,9 @@
 ===Noun===
 '''battologism''' (''plural'' '''battologisms''')
 
-#A [[sentence]] or [[phrase]] in which a [[syllable]] or short sequence of syllables is repeated, often with different meanings. Example: ''Wright did not write "rite" right. Wright, write "rite" right, right away!'' Compare [[tongue-twister]].
+#A [[sentence]] or [[phrase]] in which a [[syllable]] or short sequence of syllables is repeated, often with different meanings. Example: ''Wright did not write "rite" right. Wright, write "rite" right, right away!''
+
+===See also===
+*[[tongue-twister]]
 
 {{protologism}}
