hyphenated <tongue-twister#49409>

--- a/wiki/tongue-twister.wikitext
+++ b/wiki/tongue-twister.wikitext
@@ -1,16 +1,16 @@
 =={{en}}==
 [[Category:English language]][[Category:Indo-European root *dn̥ghū-]]
 ===Noun===
-'''[[tongue]] [[twister]]'''
+'''[[tongue]]-[[twister]]''' (''plural'' '''tongue-twisters''')
 
 #A phrase that is deliberately designed to be difficult to say correctly, usually because of varying combinations of similar [[phoneme]]s.
 #:''"Red lorry, yellow lorry" and "Peter Piper picked a peck of pickled peppers" are well-known tongue twisters.''
 
 ====Translations====
-*French: phrase ''f'' tr&egrave;s difficile &agrave; prononcer<!-- not wikified since it's obviously not a set phrase, though it's all my dictionary has to offer-->
+*French: phrase ''f'' très difficile à prononcer<!-- not wikified since it's obviously not a set phrase, though it's all my dictionary has to offer-->
 *German: [[Zungenbrecher]] ''m''
 *Spanish: [[trabalenguas]] ''m''
 
 ===See also===
-*[[finger fumbler]]
+*[[finger-fumbler]]
 *[[w:Tongue_twister|Wikipedia article on tongue twisters]]
