hyphenated <tongue-twister#49409>

--- a/wiki/tongue-twister.wikitext
+++ b/wiki/tongue-twister.wikitext
@@ -13,4 +13,4 @@
 
 ===See also===
 *[[finger-fumbler]]
-*[[w:Tongue_twister|Wikipedia article on tongue twisters]]
+*[[w:Tongue_twister|Wikipedia article on tongue-twisters]]
