Turkish: one <bir#8339>

--- a/wiki/bir.wikitext
+++ b/wiki/bir.wikitext
@@ -1,10 +1,15 @@
 ==Indonesian==
-====bir====
-'''noun'''
+===noun===
+'''bir'''
 # [[beer]]
 
 ----
-
+==Turkish==
+===Number===
+'''bir'''
+#[[one]]
+#[[an]]
+----
 == [[Volapük]] == 
 === [[noun]] === 
 # [[beer]]
