hyphenated <finger-fumbler#49426>

--- a/wiki/finger-fumbler.wikitext
+++ b/wiki/finger-fumbler.wikitext
@@ -1,6 +1,7 @@
 =={{en}}==
 [[Category:English language]]
-===Noun===
-'''finger fumbler'''
 
-#The [[sign language]] equivalent of a [[tongue twister]]; a phrase that is very difficult to sign correctly.
+===Noun===
+'''finger-fumbler''' (''plural'' '''finger-fumblers''')
+
+#The [[sign language]] equivalent of a [[tongue-twister]]; a phrase that is very difficult to sign correctly.
