fmt (etym goes before def); +plural; +"fiorista" <fiore#65935>

--- a/wiki/fiore.wikitext
+++ b/wiki/fiore.wikitext
@@ -1,15 +1,16 @@
 ==Italian==
-===Noun===
-'''fiore''' ''m''
-
-# [[flower]]
-
 ===Etymology===
-from Latin ''[[flos]], floris''
+From Latin ''[[flos]], floris''
+
+===Noun===
+'''fiore''' ''m'' (''plural'' '''fiori''')
+
+#[[flower]]
 
 ===Related terms===
 *[[fiorellino]]
 *[[fioretto]]
 *[[fiorile]]
 *[[fiorire]]
+*[[fiorista]]
 *[[fiorone]]
