fmt; indicative present tense <può#65920>

--- a/wiki/pu%C3%B2.wikitext
+++ b/wiki/pu%C3%B2.wikitext
@@ -2,4 +2,4 @@
 ===Verb form===
 '''può'''
 
-# third-person singular of [[potere]]
+#Third-person singular indicative present tense of '''[[potere]]'''.
