--- a/wiki/love.wikitext
+++ b/wiki/love.wikitext
@@ -313,3 +313,7 @@ The translations below need to be checked by native speakers and then inserted i
 [[pl:love]]
 [[sv:love]]
 [[Category:Nouns]][[Category:Transitive Verbs]][[Category:Intransitive Verbs]]
+
+==[[Multilingual associations]]==
+*[[Hebrew]]: '''love''' בלב  /ba l'ev/ (in [[heart]]), '''love''' וללבלב /ve l'elavl'ev/ (and [[blossom]]) 
+*[[Russian]]: I love you - [[я]] /ja/ тебя /t'eb'a/ люблю /l'ubl'u/
