--- a/wiki/potete.wikitext
+++ b/wiki/potete.wikitext
@@ -2,4 +2,4 @@
 ===Verb form===
 '''potete'''
 
-#Second-person singular plural present tense of '''[[potere]]'''.
+#Second-person plural indicative present tense of '''[[potere]]'''.
