syn++ <Australian rules football#65733>

--- a/wiki/Australian_rules_football.wikitext
+++ b/wiki/Australian_rules_football.wikitext
@@ -1,10 +1,11 @@
 ==English==
 ===Noun phrase===
-'''Australian rules football'''
+'''[[Australian]] [[rule]]s [[football]]'''
 
 #A variety of [[football]] devised in [[Australia]].
 
 ====Synonyms====
+*[[AFL]]
 *[[Aussie Rules]]
 
 ====Translations====
