--- a/wiki/%D9%86%D8%A7%D9%86.wikitext
+++ b/wiki/%D9%86%D8%A7%D9%86.wikitext
@@ -1,5 +1,13 @@
-==Urdu==
+==[[Persian]]==
 ===Noun===
-'''نان'''
+'''نان''' (nān)
+
+# [[Naan]], a type of [[bread]]
+
+----
+
+==[[Urdu]]==
+===Noun===
+'''نان''' (nān)
 
 # [[Naan]], a type of [[bread]]
