--- a/wiki/naan.wikitext
+++ b/wiki/naan.wikitext
@@ -10,6 +10,6 @@ Urdu ''nan'', Persian ''nan''
 ====Translations====
 *Chinese: [[馕]] (nang)
 *Japanese: [[ナン]] (nan)
-*[[Persian]]: [[نان]]
+*[[Persian]]: [[نان]] (nān)
 *[[Tamil]]: [[நான்]]
-*[[Urdu]]: [[نان]]
+*[[Urdu]]: [[نان]] (nān)
