/* Translations */ +telugu <curry#38370>

--- a/wiki/curry.wikitext
+++ b/wiki/curry.wikitext
@@ -13,7 +13,8 @@
 *Finnish: [[kurry]] (1)
 *German: Curry ''n'' (1, 2)
 *Spanish: curry ''m''
-*Tamil: [[கறி]]
+*[[Tamil]]: [[கறி]]
+*[[Telugu]]: [[కర్రీ]]
 
 ====See also====
 *[[balti]]
