--- a/wiki/curry.wikitext
+++ b/wiki/curry.wikitext
@@ -9,9 +9,11 @@
 *[[ruby murray]] (''rhyming slang'')
 
 ====Translations====
+*Chinese: [[咖喱]] (gali)
 *Dutch: [[kerrie]] ''m'' (1), curry ''m'' (1)
 *Finnish: [[kurry]] (1)
 *German: Curry ''n'' (1, 2)
+*Japanese: [[カレー]]
 *Spanish: curry ''m''
 *[[Tamil]]: [[கறி]]
 *[[Telugu]]: [[కర్రీ]]
