--- a/wiki/ride.wikitext
+++ b/wiki/ride.wikitext
@@ -12,11 +12,20 @@
 *[[Catalan]]: [[muntar]]
 *[[Dutch]]: [[rijden]]
 *[[Esperanto]]: [[rajdi]]
-*[[French]]: [[rouler]]
+*French: [[rouler]]
 *[[Frisian]]: ride
-*[[German]]: [[reiten]] (horse), [[fahren]] (bicycle, bus)
+*German: [[reiten]] (horse), [[fahren]] (bicycle, bus)
 *[[Indonesian]]: [[naik]], [[naik|menaiki]], [[kendara|mengendarai]], [[tunggang|menunggang]]
-*[[Japanese]]: [[乗る]] ([[のる]], noru)
-*[[Korean]]: 말을 타다 (mal-eul-ta-da); [[Hanja]]: 승마 (seung-ma)
-*[[Spanish]]: [[montar]]
+*Italian: [[cavalcare]]
+*Japanese: [[乗る]] ([[のる]], noru)
+*[[Korean]]: 말을 [[타다]] (mal-eul tada); [[Hanja]]: 승마 (seung-ma; horse)
+*Spanish: [[montar]]
 *[[Turkish]]: [[sürmek]], [[binmek]]
+
+----
+
+==Italian==
+===Verb form===
+'''ride'''
+
+# third-person singular indicative present of [[ridere]]
