--- a/wiki/ride.wikitext
+++ b/wiki/ride.wikitext
@@ -1,5 +1,6 @@
+==English==
 === Pronunciation ===
-*[[w:SAMPA|SAMPA]]: /'/
+*[[w:SAMPA|SAMPA]]: /<tt>"raId</tt>/
 *[[w:IPA|IPA]]: /'raɪd/
 
 === Verb ===
