--- a/wiki/cover.wikitext
+++ b/wiki/cover.wikitext
@@ -14,6 +14,7 @@ According to the [[w:Oxford English Dictionary|Oxford English Dictionary]], the 
 
 === Translations ===
 *[[Dutch]]: [[omslag]] ''m, n''
+*[[French]]: [[couvre]], [[couvercle]]
 *[[Esperanto]]: [[kovrilo]]
 *[[Indonesian]]: [[tutup]], [[lingkup]], [[tudung]], [[sampul]]
 *[[Japanese]]: [[カバー]] (kabā)
