--- a/wiki/op_shop.wikitext
+++ b/wiki/op_shop.wikitext
@@ -1,7 +1,12 @@
 ==English==
-
 ===Etymology===
-'''Op'''portunity + '''Shop'''
+'''op'''portunity + '''shop'''
 
 ===Noun===
+'''[[op]] [[shop]]'''
+
 #(''Australian'') Shop where goods, often used, are given to the shop, and then sold for a low price. Usually a charity shop.
+
+===See also===
+*[[Oxfam]]
+*[[Saint Vinny's]]
