add to phrasebook category <many thanks#36353>

--- a/wiki/many_thanks.wikitext
+++ b/wiki/many_thanks.wikitext
@@ -1,13 +1,18 @@
+==English==
 ===Expression===
 '''[[many]] [[thanks]]'''
+
 # an expression of gratitude
 
 ====Translations====
 *Dutch: [[Heel erg bedankt]] (''[[Media:Heel_erg_bedankt.ogg|hear it]]'')
-*Esperanto: [[Mi dankegas?]]
+*[[Esperanto]]: [[Mi dankegas?]]
 *French: [[Merci bien?]]
 *German: [[Vielen Dank]]
 *Hebrew: [[תודה רבה]] (toda raba)
 *Japanese: [[domo arigato]], [[domo arigato gozai masu]]
 *Spanish: [[Muchas gracias]]
 *Vietnamese: [[Cảm ơn nhiều]], [[Cảm ơn lắm]]
+
+
+[[Category:Phrasebook]]
