--- a/wiki/how_are_you.wikitext
+++ b/wiki/how_are_you.wikitext
@@ -1,18 +1,19 @@
 ==English==
 ===Expression===
-'''how are you?'''
+'''[[how]] [[are]] [[you]]?'''
 
 #Used as a [[courtesy]] on meeting someone to inquire about their [[health]].
 
 ====Translations====
-*Deutsch: [[Wie geht es dir?]] (''informal singular''), [[Wie geht es euch]] (''formal singular''), [[Wie geht es ihnen?]] (''informal plural''), [[Wie geht es Ihnen]] (''formal plural'')
-
 *Dutch: [[hoe gaat het]]?
 *French: [[ça va]]?, [[comment ça va]]?
+*German: [[Wie geht es dir?]] (''informal singular''), [[Wie geht es euch]] (''formal singular''), [[Wie geht es ihnen?]] (''informal plural''), [[Wie geht es Ihnen]] (''formal plural'')
 *Italian: [[come stai]] (''informal singular''), [[come sta]] (''formal singular''), [[come state]] (''informal and formal plural, formal singular''), [[come stanno]] (''formal plural'')
 *Japanese: [[お元気ですか]] (おげんきですか, ogenki desu ka)
 *Latvian: [[Kā iet]]?, [[Kā klājas]]?
-*Punjabi: [[کی حال اے پا جی]]
+*[[Punjabi]]: [[کی حال اے پا جی]]
 *Spanish: [[como estas]]?
 *[[Tagalog]]: [[kumusta]]
-*Urdu: [[کیسا هے]] ,[[کیا حال هے]]
+*[[Urdu]]: [[کیسا هے]] ,[[کیا حال هے]]
+
+[[Category:Phrasebook]]
