--- a/wiki/I_love_you.wikitext
+++ b/wiki/I_love_you.wikitext
@@ -437,7 +437,9 @@ Note that hongkongais may find it too funny to say I love you directly.
 *:Ngiyakuthanda! 
 *:Tom hó ichema
 
-== External links ==
+=== External links ===
 * [http://www.heavenonastick.com/whatididforlove/index.php?showtopic=30 I Love You in 100 Languages]
 * [http://www.infantologie.de/love/sprache.html  I love you in more than 100 languages]
 [[sv:I love you]]
+
+[[Category:Phrasebook]]
