--- a/wiki/kamikaze.wikitext
+++ b/wiki/kamikaze.wikitext
@@ -11,7 +11,7 @@ From Japanese [[神風]] (かみかぜ, kamikaze), ''divine wind''.
 #one who makes such an attack
 
 ====Translations====
-*Japanese: [[特攻隊]] (とっこうたい, tokkōtai) (''popular''), [[神風特攻隊]] (かみかぜとっこうたい)
+*Japanese: [[特別攻撃隊]] (tokubetsukōgekitai) (''official''), [[特攻隊]] (とっこうたい, tokkōtai) (''popular''), [[神風特攻隊]] (かみかぜとっこうたい, kamikazetokkōtai)<!-- i need a better explanation for this last one but i've seen it myself in a japanese electronic dictionary -->
 
 ===See also===
 *[[hara-kiri]]
