--- a/wiki/is_it_going_to_rain.wikitext
+++ b/wiki/is_it_going_to_rain.wikitext
@@ -4,3 +4,5 @@
 
 ====Translations====
 *{{nl}}: [[Zou het gaan regenen?]] /[[media:Zou_het_gaan_regenen.ogg|zɑʊ hət gaːn regənən?]]/
+
+[[Category:Phrasebook]]
