--- a/wiki/what_a_lovely_day.wikitext
+++ b/wiki/what_a_lovely_day.wikitext
@@ -5,3 +5,5 @@
 ====Translations====
 *{{nl}}: [[Wat een mooie dag]] /[[media:Wat_een_mooie_dag.ogg|Wat ən mojə dag]]/
 *{{ja}}: [[いいお天気ですね]]。 (''Nice day, isn't it?'') /iː ɔtɛŋki dɛsu̥ nɛ/
+
+[[Category:Phrasebook]]
