--- a/wiki/how_are_you.wikitext
+++ b/wiki/how_are_you.wikitext
@@ -6,7 +6,7 @@
 
 ====Translations====
 *Dutch: [[hoe gaat het]]?
-*French: [[ça va]]?, [[comment ça va]]?
+*French: [[Ça va ?]], [[Comment ça va ?]] (casual), [[Comment allez-vous ?]] (formal)
 *German: [[Wie geht es dir?]] (''informal singular''), [[Wie geht es euch]] (''formal singular''), [[Wie geht es ihnen?]] (''informal plural''), [[Wie geht es Ihnen]] (''formal plural'')
 *{{gu}}: [[તમે કેમ છો]] (formal), [[કેમ છે]] (casual)
 *Italian: [[come stai]] (''informal singular''), [[come sta]] (''formal singular''), [[come state]] (''informal and formal plural, formal singular''), [[come stanno]] (''formal plural'')
