add to phrasebook category <oh my God#57063>

--- a/wiki/oh_my_God.wikitext
+++ b/wiki/oh_my_God.wikitext
@@ -4,14 +4,16 @@
 
 #Said when something is beyond belief.
 
-===Synonyms===
+====Synonyms====
 *[[good God]], [[good Lord]], [[sweet mother of God]], ''many others''
 
 ====Translations====
-*Catalan: [[Déu meu]]
+*[[Catalan]]: [[Déu meu]]
 *Dutch: [[Oh, mijn God]], [[lieve hemel]], [[goeie genade]]<!--what is the correct capitalisation of these translations?-->
 *Finnish: [[herranjestas]], [[Herran pieksut]], [[Luojan tähden]], [[herranjumala]]
 *French: [[mon Dieu]]
 *German: [[mein Gott]]
 *Italian: [[Dio mio]]
 *Spanish: [[Dios mio]]
+
+[[Category:Phrasebook]]
