+stub; add to phrasebook category <happy Easter#41851>

--- a/wiki/happy_Easter.wikitext
+++ b/wiki/happy_Easter.wikitext
@@ -1,7 +1,8 @@
+==English==
 ===Expression===
-'''happy Easter'''
+'''happy Easter'''<!-- capitalisation looks wrong -->
 
-# 
+# {{substub}}
 
 ====Translations====
 *Dutch: [[zalig pasen]]
@@ -19,3 +20,5 @@
 ====See also====
 [[Happy Christmas]]
 [[Happy New Year]]
+
+[[Category:Phrasebook]]
