--- a/wiki/good_morning.wikitext
+++ b/wiki/good_morning.wikitext
@@ -1,3 +1,4 @@
+==English==
 ===Expression===
 '''good morning'''
 
@@ -7,5 +8,7 @@
 *Dutch: [[goeiemorgen]]
 *French: [[bon matin]]
 *German: [[gutenmorgen]]
-*Hebrew: [[בוקר טוב]]
-*Japanese: ohayo
+*Hebrew: [[בוקר טוב]] (boker tov)
+*Japanese: (ohayo gozaimasu)
+
+[[Category:Phrasebook]]
