balance columns; add to phrasebook category <I don't think so#55926>

--- a/wiki/I_don%27t_think_so.wikitext
+++ b/wiki/I_don%27t_think_so.wikitext
@@ -19,16 +19,17 @@
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-<!--languages from A to M go here-->
-*Dutch: [[ik denk het niet]] /[[media:Ik_denk_het_niet.ogg|ɪk dɛŋk hət nit]]/
+<!--left column-->
+*Dutch:
+*:[[ik denk het niet]] /[[media:Ik_denk_het_niet.ogg|ɪk dɛŋk hət nit]]/
 *:[[ik denk van niet]] /[[media:Ik_denk_van_niet.ogg|ɪk dɛŋk van nit]]/
-*French: [[je pense que non]], [[je crois que non]]
-*Italian: [[penso di no]]
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-<!--languages from N to Z go here-->
+<!--right column-->
+*French: [[je pense que non]], [[je crois que non]]
+*Italian: [[penso di no]]
 *Spanish: [[pienso que no]]
 |}
 |}
@@ -47,3 +48,5 @@
 <!--languages from N to Z go here-->
 |}
 |}
+
+[[Category:Phrasebook]]
