wikification; add to phrasebook category; .au is the commonwealth and we '''never''' say "happy" christmas! <merry Christmas#34405>

--- a/wiki/merry_Christmas.wikitext
+++ b/wiki/merry_Christmas.wikitext
@@ -1,36 +1,37 @@
+==English==
 ===Expression===
-'''merry Christmas'''
+'''[[merry]] [[Christmas]]'''<!-- capitalisation looks wrong -->
 
 # Used to express good wishes at Christmas time.
 
+====Related expressions====
+*[[happy Christmas]] (''UK & Commonwealth''), [[Season's greetings]]
 
-===Related words===
-[[happy Christmas]] (''UK & Commonwealth''), [[Season's greetings]]
-
-===Translations===
+====Translations====
 *Afrikaans: [[een plesierige kerfees]]
-*Argentinian: [[felices pasquas]] ???
-*Azeri: [[tezze iliniz yahsi olsun]]
-*Basque: [[zorionak on]]
-*Bohemian: [[vesele vanoce]]
+*[[Azeri]]: [[tezze iliniz yahsi olsun]]
+*[[Basque]]: [[zorionak on]]
+*[[Bohemian]]: [[vesele vanoce]]
 *Breton: [[nedeleg laouen]]
 *Bulgarian: [[Весела Коледа]]
-*Cornish: [[Nadelik looan]]
+*[[Cornish]]: [[Nadelik looan]]
 *Croatian: [[sretan Bbzic]]
 *Czech: [[prejeme vam vesele vanoce]]
 *Dutch: [[zalig kerstfeest]]
-*Esperanto: [[gxojan kristnaskon]]
+*[[Esperanto]]: [[gxojan kristnaskon]]
 *Estonian: [[häid jõule]]
 *Finnish: [[hyvää joulua]]
 *French: [[joyeux noël]]
-*Frisian: [[noflike krystdagen]]
+*[[Frisian]]: [[noflike krystdagen]]
 *German: [[fröhliche Weihnachten]]
-*Hawaiian: [[mele kalikimaka]]
+*[[Hawaiian]]: [[mele kalikimaka]]
 *Italian: [[buon natale]]
 *Norwegian: [[god jul]]
 *Polish: [[Wesołych Świąt]]
 *Romanian: [[Crăciun fericit]]
 *Slovak: [[veselé Vianoce]]
-*Spanish: [[feliz navidad]]
+*Spanish: [[feliz navidad]], [[felices pasquas]] (''Argentina'')<!-- ?? -->
 *Swedish: [[god jul]]
 *Turkish: [[noeliniz kutlu olsun]] ???
+
+[[Category:Phrasebook]]
