--- a/wiki/twenty.wikitext
+++ b/wiki/twenty.wikitext
@@ -10,8 +10,7 @@
 
 # (''colloquial'') A [[banknote]] with a denomination of 20.
 #: ''The waiter's face lit up when I gave him a twenty.''
-# (''CB slang'') [[10-20]] (location).
-#: ''What's your twenty, good buddy?''
+# (''CB slang'') [[10-20]].
 
 ===Translations===
 *Arabic: [[عشرون]] (‘ishruun)
