Moved noun senses below number translations <twenty#3873>

--- a/wiki/twenty.wikitext
+++ b/wiki/twenty.wikitext
@@ -5,13 +5,6 @@
 **Last: [[ten]] ([[10]]), [[nineteen]] ([[19]])
 **Next: [[twenty-one]] ([[21]]), [[thirty]] ([[30]])
 
-===Noun===
-'''twenty'''
-
-# (''colloquial'') A [[banknote]] with a denomination of 20.
-#: ''The waiter's face lit up when I gave him a twenty.''
-# (''CB slang'') [[10-20]].
-
 ===Translations===
 *Arabic: [[عشرون]] (‘ishruun)
 *Basque: [[hogei]]
@@ -48,5 +41,13 @@
 *Thai: [[ยี่สิบ]]
 *Turkish: [[yirmi]]
 *Welsh: [[ugain]] ''vingesimal, traditional'', [[dau ddeg]] ''m, decimal'', [[dwy ddeg]] ''f, decimal''.
+
+===Noun===
+'''twenty'''
+
+# (''colloquial'') A [[banknote]] with a denomination of 20.
+#: ''The waiter's face lit up when I gave him a twenty.''
+# (''CB slang'') [[10-20]] (location).
+#: ''What's your twenty, good buddy?''
 
 [[Category:English cardinal numbers]]
