--- a/wiki/%E7%88%B1.wikitext
+++ b/wiki/%E7%88%B1.wikitext
@@ -31,6 +31,48 @@
 * '''Style''': [[Simplified Chinese]] 
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[愛]]
 
+===Compounds===
+*[[爱别离苦]]
+*[[爱不释手]]
+*[[爱才如命]]
+*[[爱财]]
+*[[爱巢]]
+*[[爱称]]
+*[[爱宠]]
+*[[爱答不理]], [[爱答不理的]]
+*[[爱戴]]
+*[[爱尔兰]]
+*[[爱抚]]
+*[[爱国]]
+*[[爱国主义]]
+*[[爱好]]
+*[[爱河]]
+*[[爱护]]
+*[[爱克斯光]]
+*[[爱克斯射线]]
+*[[爱理不理]]
+*[[爱怜]]
+*[[爱恋]]
+*[[爱侣]]
+*[[爱美]]
+*[[爱面子]]
+*[[爱莫能助]]
+*[[爱慕]]
+*[[爱卿]]
+*[[爱情]]
+*[[爱人]]
+*[[爱人儿]]
+*[[爱沙尼亚]]
+*[[爱神]]
+*[[爱斯基摩人]]
+*[[爱窝窝]]
+*[[爱屋及乌]]
+*[[爱惜]]
+*[[爱小]]
+*[[爱心]]
+*[[爱悦]]
+*[[爱憎]]
+
 * '''Other info''': 
 
 ----
