--- a/wiki/how_are_you.wikitext
+++ b/wiki/how_are_you.wikitext
@@ -9,6 +9,7 @@
 *French: [[Ça va ?]], [[Comment ça va ?]] (casual), [[Comment allez-vous ?]] (formal)
 *German: [[Wie geht es dir?]] (''informal singular''), [[Wie geht es euch]] (''formal singular''), [[Wie geht es ihnen?]] (''informal plural''), [[Wie geht es Ihnen]] (''formal plural'')
 *{{gu}}: [[તમે કેમ છો ?]] (''tame kem chho'') (formal), [[કેમ છે ?]] (''kem chhe'') (casual)
+*{{hi}}: [[आप कैसे हैं ?]] (''āp kaise he'') (formal), [[कैसे हो ?]] (''kaise ho'') (casual)
 *Italian: [[come stai]] (''informal singular''), [[come sta]] (''formal singular''), [[come state]] (''informal and formal plural, formal singular''), [[come stanno]] (''formal plural'')
 *Japanese: [[お元気ですか]] (おげんきですか, ogenki desu ka)
 *Latvian: [[Kā iet]]?, [[Kā klājas]]?
