/* Etymology */ clarification <idiot#39074>

--- a/wiki/idiot.wikitext
+++ b/wiki/idiot.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-Greek ιδιωτης, idiôtês, "a private citizen, individual", from ιδιος, idios, "private", used derisively in Athens to refer to one who declined to take part in public life.
+Greek ιδιωτης, idiôtês, "a private citizen, individual", from ιδιος, idios, "private", used derisively in ancient Athens to refer to one who declined to take part in public life.
 
 ===Noun===
 '''idiot''' ([[idiots]])
