/* Expression */ <happy Easter#41851>

--- a/wiki/happy_Easter.wikitext
+++ b/wiki/happy_Easter.wikitext
@@ -2,7 +2,7 @@
 ===Expression===
 '''happy Easter'''<!-- capitalisation looks wrong -->
 
-# {{substub}}
+# Expression used at [[Easter]] time. 
 
 ====Translations====
 *Dutch: [[zalig pasen]]
