<what is your name#36365>

--- a/wiki/what_is_your_name.wikitext
+++ b/wiki/what_is_your_name.wikitext
@@ -36,12 +36,15 @@
 *Hebrew:
 *:[[מה שמך?]] (Ma shimkha?)
 *{{hi}}:
-*:[[आपका नाम क्या है ?]] (āpkā nām kyā he) (formal) ''Your name what is ?''
-*:[[तुम्हारा नाम क्या है ?]] (tumhārā nām kyā he) (casual) ''Your name what is ?''
+*:[[आपका नाम क्या है ?]] (āpkā nām kyā he) (formal) ''Your name what is ?''
+*:[[तुम्हारा नाम क्या है ?]] (tumhārā nām kyā he) (casual) ''Your name what is ?''
 *Italian:
 *:(Formal [[Come si chiama Lei?]] (''How do you call yourself?'')
 *Japanese:
 *:[[あなたの名前はなんですか？]] (anata no namae wa nan desu ka?)
+*Kannada:
+*:(Formal)ನಿಮ್ಮ ಹೆಸರೇನು? (Nimma HesarEnu) 
+*:(Casual)ನಿನ್ನ ಹೆಸರೇನು? (Ninna HesarEnu)
 *[[Marshallese]]: 
 *:[[Etam̧?]] (''Name-your?'')
 *Mongolian:
