<my name is#36350>

--- a/wiki/my_name_is.wikitext
+++ b/wiki/my_name_is.wikitext
@@ -28,7 +28,7 @@
 *:[[Ich bin der ...]] ''m'', [[Ich bin die ...]] ''f''
 *:(''literal translation'') Mein Name ist ...
 *{{gu}}
-*:[[મારુ નામ ... છે]] (meru nām ... tche) ''My name ... is''
+*:[[મારુ નામ ... છે]] (meru nām ... tche) ''My name ... is''
 *Hebrew:
 *:[[שמי ...]] (shmi ...)
 *[[Hindi]]:
@@ -39,6 +39,8 @@
 *Japanese:
 *:[[私は...です]] (わたしは...です, watashi wa ... desu) ''I'm ...''
 *:(''literal translation'') [[私の名前は...です]] (わたしのなまえは...です, watashi no namae wa ... desu)
+*Kannada:
+*:ನನ್ನ ಹೆಸರು...  (nanna Hesaru)
 *[[KiSwahili]]:
 *:[[Jina langu ni ...]]
 *:[[Naitwa ...]]
