--- a/wiki/my_name_is.wikitext
+++ b/wiki/my_name_is.wikitext
@@ -56,6 +56,8 @@
 *:[[Moje nazwisko brzmi ...]]
 *Russian:
 *:[[Меня зовут ...]] (Menya zovut ...)
+*Sanskrit:
+*:मम नाम (Mama Naama)
 *Spanish:
 *:[[Me llamo ...]] ''I call myself ...''
 *:(''literal translation'') Mi nombre es ...
