<my name is#36350>

--- a/wiki/my_name_is.wikitext
+++ b/wiki/my_name_is.wikitext
@@ -57,7 +57,7 @@
 *Russian:
 *:[[Меня зовут ...]] (Menya zovut ...)
 *Sanskrit:
-*:मम नाम (Mama Naama)
+*:मम नाम... (Mama Naama)
 *Spanish:
 *:[[Me llamo ...]] ''I call myself ...''
 *:(''literal translation'') Mi nombre es ...
