adding sanskrit <what is your name#36365>

--- a/wiki/what_is_your_name.wikitext
+++ b/wiki/what_is_your_name.wikitext
@@ -52,6 +52,9 @@
 *Russian:
 *:(Informal) [[Как тебя зовут?]] (Kak tebya zovut?)
 *:(Formal) [[Как вас зовут?]] (Kak vas zovut?)
+*Sanskrit:
+*:(Formal)भवतः नाम किम्? (bhavathaha naama kim?) 
+*:(Casual)तव नाम किम्? (tava naama kim?)
 *Spanish:
 *:[[¿Cómo se llama Usted?]] (''How do you call yourself?'') (formal), [[¿Como te llamas?]] (casual)
 *:(''literal translation'') [[¿Cuál es su nombre?]] (formal), [[¿Cuál es tu nombre?]] (casual)
