--- a/wiki/I_love_you.wikitext
+++ b/wiki/I_love_you.wikitext
@@ -231,8 +231,8 @@ Note that hongkongais may find it too funny to say I love you directly.
 *:私はあなたを愛しています (Watashi wa anata o aishite imasu) 
 *:私はあなたを愛します (Watakushi wa anata o ai shimasu)
 *[[Kannada]]:
-*:(Naanu Ninnanu Preethisuthene)
-*:(Naanu Ninnanu Mohisuthene)
+*:ನಾನು ನಿನ್ನನ್ನು ಪ್ರೀತಿಸುತ್ತೇನೆ(Naanu Ninnanu Preethisuthene)
+*:ನಾನು ನಿನ್ನನ್ನು ಇಷ್ಟಪಟ್ಟಿರುವೆ(Naanu Ninnanu Ishtapattiruve)
 *[[KiSwahili]]:<!-- why do we have both swahili and kiswahili?? --"ki-" is a prefix for "language"-->
 *:Nakupenda
 *[[Klingon]]:
