--- a/wiki/alacre.wikitext
+++ b/wiki/alacre.wikitext
@@ -1,6 +1,17 @@
+==Italian==
+===Adjective===
+'''aracre'''
+
+# [[brisk]], [[alacritous]]
+
+===Related terms===
+*[[alacremente]]
+*[[alacrità]]
+
 ----
 
 ==[[Romanica]]==
 ===Adjective===
-<b>alacre</b>
+'''alacre'''
+
 #[[eager]], [[brisk]], [[alacritous]]
