--- a/wiki/%C4%91%E1%BB%93ng.wikitext
+++ b/wiki/%C4%91%E1%BB%93ng.wikitext
@@ -1,12 +1,8 @@
 ==Vietnamese==
-
 ===Noun===
 '''Đồng''' ([[銅]])
 
-#The unit of currency in [[Vietnam]]; Vietnamese dollar. Symbol: [[₫]].
+#[[Dong]], the unit of currency in [[Vietnam]]; Vietnamese dollar. Symbol: [[₫]].
 #*(''American Vietnamese'') The United States [[dollar]].
 #*The [[₫]] symbol itself.
-# [[cupper]]
-
-====Translations====
-*English: [[dong]]
+# [[copper]]
