--- a/wiki/%E9%9B%B7%E9%B3%B4.wikitext
+++ b/wiki/%E9%9B%B7%E9%B3%B4.wikitext
@@ -1,3 +1,17 @@
-[[Japanese]] [[Kanji]]
+==Chinese==
+===Verb===
+[[雷]][[鳴]] (léimíng)
 
-Raimei.[[Thunder]].Cf [[かみなり]]Kaminari
+# to [[thunder]]
+
+*Simplified: [[雷鸣]] 
+
+----
+
+==Japanese==
+[[雷]][[鳴]] (raimei)
+
+# [[Thunder]].
+
+===Synonym===
+*[[かみなり]] (kaminari)
