--- a/wiki/jeudi.wikitext
+++ b/wiki/jeudi.wikitext
@@ -1,23 +1,9 @@
 ==French==
-[[noun]]
+===Noun===
+'''jeudi''' ''m''
 
-#The fourth day of the [[week]] (according to the [[ISO]] 8601 standard).
+#[[Thursday]], the fourth day of the [[week]] (according to the [[ISO]] 8601 standard).
 
-===Translations===
-*Blackfoot: [[Náámiksistsiko]]
-*de: [[Donnerstag]]
-*[[eo]]: [[jauxdo]]
-*es: [[jueves]]
-*eu: [[ostegun]]
-*[[Georgian]]: [[ხუთშაბათი]]
-*he: [[יום חמישי]]
-*mi: [[täite]]
-*nl: [[donderdag]]
-*pl: [[czwartek]]
-*pt: [[quinta-feira]]
-*sq: [[e enjte]]
-*sv: [[torsdag]]
-*Wolof: [[Alxames]]
-*yi: [[דאָנערשטיק]]
-
+===Saying===
+:''la semaine des quatre jeudis'' : never
 [[Category:Days of the week]]
