/* Translations */ translation table <Allah#37048>

--- a/wiki/Allah.wikitext
+++ b/wiki/Allah.wikitext
@@ -12,6 +12,11 @@ Arabic [[الله]] (allāh), from &lrm;[[ال-]]&rlm; (al-) "the" + [[اله|إ
 While the Arabic [[الله]] is used generically to refer to God in Jewish, Christian, Islamic and presumably other contexts, current English usage almost always restricts the term to Islamic contexts only.  Various newspaper style manuals recommend translating the Arabic word as ''God'', as this better reflects Arabic usage, but the term is often left untranslated in Islamic contexts.  Thus either "Allah is great" or "God is great" may be seen.
 
 ====Translations====
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
 *Arabic: [[الله]] (ʾAllāh)
 *Bulgarian: [[Аллах]]
 *Chinese: [[阿拉]]
@@ -21,6 +26,11 @@ While the Arabic [[الله]] is used generically to refer to God in Jewish, Chr
 *French: Allah
 *German: Allah
 *Hebrew: [[אלוהים]], ''m''
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
 *Japanese: [[アッラーフ]] (arrāfu), [[アッラー]] (arrā)
 *Korean: [[알랗]] (allah)
 *Norwegian: Allah
@@ -29,6 +39,8 @@ While the Arabic [[الله]] is used generically to refer to God in Jewish, Chr
 *Slovak: [[Alah]] ''m''
 *Slovene: [[Alah]]
 *Swedish: Allah
+|}
+|}
 
 ===See also===
 *[[w:Allah|Wikipedia article on Allah]]
