+fr: entry (one sense) <rame#65986>

--- a/wiki/rame.wikitext
+++ b/wiki/rame.wikitext
@@ -1,8 +1,15 @@
+==French==
+===Noun===
+'''rame''' ''f''
+
+#[[underground train]] (''British''), [[Tube train]] (''British''), [[subway train]] (''US''), [[metro train]]
+
+----
 ==Italian==
 ===Noun===
 '''rame''' ''m''
 
-# [[copper]]
+#[[copper]] (''metal'')
 
 ===Related terms===
 *[[ramare]]
