--- a/wiki/%E8%BC%95.wikitext
+++ b/wiki/%E8%BC%95.wikitext
@@ -1,4 +1,4 @@
-* '''Alternate form''': [[轻]]
+* '''Alternate form''': [[轻]], [[軽]]
 
 * '''[[Wiktionary:Chinese radical index| Radical]] Number 159''': [[Wiktionary:Chinese radical index 車|車]]+7 strokes
 
@@ -13,14 +13,14 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#light
-*# easy, simple
-*# gentle
+*# [[light]]
+*# [[easy]], [[simple]]
+*# [[gentle]]
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -39,7 +39,7 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[けい]] (kei), [[きょう]] (kyō)
