--- a/wiki/attenuation.wikitext
+++ b/wiki/attenuation.wikitext
@@ -1,12 +1,15 @@
-'''Attenuation''' is to lessen the amount, [[force]], [[magnitude]], or value of something.
+==English==
+===Noun===
+'''Attenuation''' 
+#To lessen the amount, [[force]], [[magnitude]], or value of something.
 
-1. In [[biology]], '''attenuation''' is a mechanism in the regulation of [[gene expression]]
+#(''Biology'') A mechanism in the regulation of gene expression.
 
-2. In [[ecology]] and [[geochemistry]], '''attenuation''' is the ability to withhold [[contaminant]]s in [[soil]] and [[groundwater]] by various mechanisms like [[adsorption]], [[dilution]], [[dispersion]] or biological [[degradation]], causing a decrease in [[concentration]] and [[toxicity]] compared to the total amount of the contaminant.
+#(''Ecology, geochemistry'') The ability to withhold contaminants in soil and [[groundwater by various mechanisms like adsorption, dilution, dispersion or biological degradation, causing a decrease in concentration and toxicity compared to the total amount of the contaminant.
 
-3. In [[physical oceanography]], light '''attenuation''' is the decrease in light [[intensity]] with depth in the water column due to absorption (by [[water]] molecules) and scattering (by [[turbidity|suspended particulates]]).
+#(''Physical oceanography'') Light '''attenuation''' is the decrease in light intensity with depth in the water column due to absorption (by water molecules) and scattering (by [[turbidity|suspended particulates]]).
 
-4. In [[telecommunication]], '''attenuation''' is the decrease in [[intensity]] of a [[signal]], [[beam]], or wave as a result of [[absorption]] of energy and of scattering out of the [[path]] to the [[detector]], but not including the reduction due to geometric spreading.  
+#(''Telecommunication''), The decrease in intensity of a [[signal]], beam, or wave as a result of [[absorption]] of energy and of scattering out of the path to the detector, but not including the reduction due to geometric spreading.  
 
 :''Note 1:''  Attenuation is usually expressed in [[Bel|dB]]. 
 :''Note 2:''  ''"Attenuation"'' is often used as a misnomer for "'''[[attenuation coefficient]],''' " which is expressed in dB per [[kilometer]]. 
