--- a/wiki/baptism.wikitext
+++ b/wiki/baptism.wikitext
@@ -1,4 +1,4 @@
-==English==
+==[[English]]==
 ===Noun===
 '''baptism''' ([[uncountable]] and [[countable]]; plural: [[baptisms]])
 
@@ -6,16 +6,24 @@
 *[[Christening]] (may depend on religion & denomination)
 
 ====Translations====
-*Dutch: [[doop]] ''m''
-*Finnish: [[kaste]]
-*French: [[baptême]] ''m''
-*German: [[Taufe]] ''f''
-*Polish: [[chrzest]] ''m''
-*Portuguese: [[batismo]] (''Brazil''), [[baptismo]] (''Portugal'')
-*Slovak: [[krst]] ''m''
+*[[Dutch]]: [[doop]] ''m''
+*[[Finnish]]: [[kaste]]
+*[[French]]: [[baptême]] ''m''
+*[[German]]: [[Taufe]] ''f''
+*[[Polish]]: [[chrzest]] ''m''
+*[[Portuguese]]: [[batismo]] (''Brazil''), [[baptismo]] (''Portugal'')
+*[[Slovak]]: [[krst]] ''m''
 
 ====Related terms====
 *[[baptise]], [[baptize]]
-*[[baptismal]]
+*[[baptismal]], [[baptistery]], [[baptistry]]
 *[[baptist]], [[Baptist]]
 *[[baptism of fire]]
+*[[dunking]]
+*[[godchild]]
+*[[goddaugther]]
+*[[godfather]]
+*[[godmother]]
+*[[godparent]]
+*[[godson]]
+*[[sprinkling]]
