--- a/wiki/godchild.wikitext
+++ b/wiki/godchild.wikitext
@@ -1,3 +1,18 @@
 ===Noun===
 ====Translations====
 *{{sk}}: [[krstňa]] ''n''
+
+====Related terms====
+*[[baptise]], [[baptize]]
+*[[baptism]], [[baptisms]]
+*[[baptismal]], [[baptistery]], [[baptistry]]
+*[[baptist]], [[Baptist]]
+*[[baptism of fire]]
+*[[christening]]
+*[[dunking]]
+*[[goddaughter]]
+*[[godfather]]
+*[[godmother]]
+*[[godparent]]
+*[[godson]]
+*[[sprinkling]]
