--- a/wiki/baptism.wikitext
+++ b/wiki/baptism.wikitext
@@ -21,7 +21,7 @@
 *[[baptism of fire]]
 *[[dunking]]
 *[[godchild]]
-*[[goddaugther]]
+*[[goddaughter]]
 *[[godfather]]
 *[[godmother]]
 *[[godparent]]
