--- a/wiki/godfather.wikitext
+++ b/wiki/godfather.wikitext
@@ -22,11 +22,19 @@
 |}
 |}
 
-===See also===
+====Related terms====
+*[[baptise]], [[baptize]]
+*[[baptism]], [[baptisms]]
+*[[baptismal]], [[baptistery]], [[baptistry]]
+*[[baptist]], [[Baptist]]
+*[[baptism of fire]]
+*[[christening]]
+*[[dunking]]
 *[[godchild]]
 *[[goddaughter]]
 *[[godmother]]
 *[[godparent]]
 *[[godson]]
+*[[sprinkling]]
 
 [[pl:godfather]]
