<state of the art#65994>

--- a/wiki/state_of_the_art.wikitext
+++ b/wiki/state_of_the_art.wikitext
@@ -1,6 +1,6 @@
 ==English==
 ===Adverb===
-[[state-of-the-art]]
+'''state-of-the-art'''
 #A property of being at the highest level of development at a particular time; [[progressive]];
 #:state-of-the-art technology
 
