--- a/wiki/godmother.wikitext
+++ b/wiki/godmother.wikitext
@@ -7,9 +7,19 @@
 ====Translations====
 *{{sk}}: [[krstná mama]] ''f'' (reflects the relationship to the baptized child); [[kmotra#Slovak|kmotra]] ''f'' (reflects the relationship to the parents of the baptized child, not to the child)
 
-===See also===
+====Related terms====
+*[[baptise]], [[baptize]]
+*[[baptism]], [[baptisms]]
+*[[baptismal]], [[baptistery]], [[baptistry]]
+*[[baptist]], [[Baptist]]
+*[[baptism of fire]]
+*[[christening]]
+*[[dunking]]
 *[[godchild]]
 *[[goddaughter]]
 *[[godfather]]
 *[[godparent]]
 *[[godson]]
+*[[sprinkling]]
+
+[[pl:godmother]]
